create home page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vaibhav Vishwakarma</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vaibhav-ThePrgrammer</title>
+    <link rel="icon" type="image/x-icon" href="/Images/logo.jpg" />
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="portfolio-container">
+      <header>
+        <nav class="navbar">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <section class="home" id="home">
+          <div class="intro-container">
+            <div class="intro">
+              <h1 class="name">Vaibhav</h1>
+              <div class="whoami">The Programmer</div>
+              <div class="punchline">Frontend Developer in the Making</div>
+              <div class="intro-text">
+                Crafting clean, responsive, and user-friendly web experiences
+                with HTML, CSS, and JavaScript. Turning ideas into interactive
+                and engaging websites. Passionate about coding, problem-solving,
+                and creating intuitive designs.
+              </div>
+            </div>
+            <div class="image-container">
+              <img src="Images/myImg.jpg" alt="My Profile Picture" />
+            </div>
+          </div>
+        </section>
+        <section class="aboutme" id="aboutme">
+        </section>
+        <section class="projects" id="projects">
+        </section>
+        <section class="contact" id="contact">
+
+        </section>
+      </main>
+
+      <footer>&copy; 2025 Vaibhav Vishwakarma. All rights reserved.</footer>
+    </div>
+  </body>
 </html>
