Complete 'About Me' section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <header>
         <nav class="navbar">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -47,7 +47,49 @@
             </div>
           </div>
         </section>
-        <section class="aboutme" id="aboutme">
+        <section class="about-me" id="about-me">
+          <div class="heading">About Me</div>
+          <div class="about-me-text">Hey, I'm Vaibhav Vishwakarma! I'm currently pursuing B.Tech. in ECE and exploring the world of coding and development. I enjoy solving problems, building things from scratch, and learning new skills along the way. When I'm not coding, you’ll probably find me playing my guitar or lost in a good book.</div>
+          <div class="skill-heading">Skills</div>
+          <div class="skill-section">
+            <div class="languages">
+              <div class="skill-section-heading">
+                Languages
+              </div>
+              <ul>
+                <li>C, C++</li>
+                <li>HTML & CSS</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+            <div class="frameworks-tools">
+              <div class="skill-section-heading">
+                Frameworks/Tools
+              </div>
+              <ul>
+                <li>Tailwind CSS</li>
+                <li>React</li>
+                <li>Git & GitHub</li>
+              </ul>
+            </div>
+            <div class="core-skills">
+              <div class="skill-section-heading">
+                Core Skills
+              </div>
+              <ul>
+                <li>DSA</li>
+                <li>Problem solving</li>
+                <li>Communication</li>
+              </ul>
+            </div>
+          </div>
+          <div class="downloads-section">
+            <div class="downloads-text">Downloads</div>
+            <div class="downloads-btns">
+              <button>Resume</button>
+              <button> CV</button>
+            </div>
+          </div>
         </section>
         <section class="projects" id="projects">
         </section>
