Activate the contact-form using formspree

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           <div class="contact-form-container">
             <form
               class="contact-form"
-              action="/"
-              method="get"
+              action="https://formspree.io/f/mdkelwpo"
+              method="post"
               class="contact-form"
             >
               <div class="contact-form-name contact-form-input">
