Correct version info.

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <div class="copyright-msg">
                     &copy; 2025 Vaibhav Vishwakarma. All rights reserved.
                 </div>
-                <div class="version-info">version 1.</div>
+                <div class="version-info">version 1.5.0</div>
             </footer>
         </div>
     </body>
